2012-01-05  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* reload.c (find_reloads): Adjust LABEL_NUSES on REG_LABEL_OPERAND
	insertion.

2012-01-05  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/51648
	* tree-cfg.c (need_fake_edge_p): Return true also for noreturn
	calls that have any non-fake successor edges.

	PR debug/51746
	* var-tracking.c (add_stores): For COND_EXEC allow oval to be NULL.

2012-01-04  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/51624
	* tree-sra.c (build_ref_for_model): When replicating a chain of
	COMPONENT_REFs, stop as soon as the offset would become negative.

2012-01-04  Jakub Jelinek  <jakub@redhat.com>

	PR debug/51695
	* dwarf2out.c (output_loc_list): For now drop >= 64KB expressions
	in .debug_loc on the floor.

2012-01-04  Andrew Pinski  <apinski@cavium.com>

	* doc/invoke.texi (-march=@var{arch}): Add octeon+ and octeon2.

2012-01-04  Andrew Pinski  <apinski@cavium.com>
	    Adam Nemet  <anemet@caviumnetworks.com>

	* config/mips/mips.md (size): Add SI and DI.
	(SIZE): New mode attribute.
	(U): New code attribute.
	* config/mips/mips-dsp.md (mips_lbux): Use gen_mips_lbux_extsi.
	(mips_lbux_<mode>): Delete.
	(mips_l<SHORT:size><u>x_ext<GPR:mode>_<P:mode>): New pattern.
	(mips_lhx): Use gen_mips_lhx_extsi.
	(mips_lhx_<mode>): Delete.
	(mips_lwx): Delete.
	(mips_l<size>x): New expand.
	(mips_lwx_<mode>): Delete.
	(mips_l<GPR:size>x_<P:mode>): New pattern.
	(*mips_lw<u>x_<P:mode>_ext): Likewise.
	* config/mips/mips-ftypes.def: Add DI f(POINTER, SI) function type.
	* config/mips/mips.c (mips_lx_address_p): New function.
	(mips_rtx_costs <case MEM>): Call mips_lx_address_p.
	(dsp64): New availability predicate.
	(mips_builtins): Add an entry for __builtin_mips_ldx.
	* config/mips/mips.h (ISA_HAS_LBX): New define.
	(ISA_HAS_LBUX): Likewise.
	(ISA_HAS_LHX): Likewise.
	(ISA_HAS_LHUX): Likewise.
	(ISA_HAS_LWX): Likewise.
	(ISA_HAS_LWUX): Likewise.
	(ISA_HAS_LDX): Likewise.